# karpathynba-v2

./: .gitignore  plot_progress.py  prepare.py  program.md  pyproject.toml  results.tsv  seed_sweep.py  train.py
